syntax = "proto3";
package swp.p1.swp.rpc.v1;

// Normative P1 schema annex for SWP-RPC payloads.

message RpcReq {
  bytes rpc_id = 1;
  string method = 2;
  bytes params = 3;
  string idempotency_key = 4;
}

message RpcResp {
  bytes rpc_id = 1;
  bytes result = 2;
}

message RpcErr {
  bytes rpc_id = 1;
  string error_code = 2;
  bool retryable = 3;
  string error_message = 4;
}

message RpcStreamItem {
  bytes rpc_id = 1;
  uint64 seq_no = 2;
  bytes item = 3;
  bool is_terminal = 4;
}

message RpcCancel {
  bytes rpc_id = 1;
  string reason = 2;
}

message Payload {
  oneof body {
    RpcReq req = 1;
    RpcResp resp = 2;
    RpcErr err = 3;
    RpcStreamItem stream_item = 4;
    RpcCancel cancel = 5;
  }
}
